<resources>
    <!-- App name-->
    <string name="app_name" translatable="false">Science!</string>

    <!-- Facebook application ID and custom URL scheme-->
    <string name="facebook_application_id" translatable="false">303503253558569</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb303503253558569</string>
    <!-- Google client ID-->
    <string name="google_web_client_id" translatable="false">28642910361-hqet1gq1cir2dpo1p67c30ugto7iqiu3.apps.googleusercontent.com</string>

    <!-- MAIN ACTIVITY -->
    <!-- Choose a topic message [CHAR LIMIT = NONE]-->
    <string name="choose_topic">Choose a \nTOPIC</string>
    <!-- Profile section label [CHAR LIMIT = NONE]-->
    <string name="profile_label">Your profile</string>

    <!-- TOPICS NAMES [CHAR LIMIT = 30]-->
    <string name="general_label">General</string>
    <string name="maths_label">Maths</string>
    <string name="computers_label">Computers</string>
    <string name="animals_label">Animals</string>

    <!-- TOPICS SUBTITLES [CHAR LIMIT = 40]-->
    <string name="general_subtitle">Sodium Sodium Sodium&#8230; Batman!</string>
    <string name="maths_subtitle">Become a root Master!</string>
    <string name="computers_subtitle">&lt;div&gt;Q: How do you annoy a web developer?&lt;/span&gt;</string>
    <string name="animals_subtitle">Where do orcas hear music? Orca-stras!</string>

    <!-- DIFFICULTY LEVELS [CHAR LIMIT = 6]-->
    <string name="easy_level">easy</string>
    <string name="medium_level">medium</string>
    <string name="hard_level">hard</string>

    <!-- BUTTONS [CHAR LIMIT = 15]-->
    <string name="play_button">Play</string>
    <string name="share_button">Share</string>
    <string name="see_stats_button">See stats</string>

    <!-- QUESTION ACTIVITY -->
    <!-- Number of questions text -->
    <string name="questions_number_text" translatable="false">
        <xliff.g example="1" id="current_question">%s</xliff.g>/<xliff.g example="10" id="total_questions">%s</xliff.g></string>
    <!-- Dialog confirmation text [CHAR LIMIT = NONE]-->
    <string name="want_close">Are you sure you want to quit? This action will remove the current
        results</string>
    <string name="yes">QUIT</string>
    <string name="no">KEEP PLAYING</string>

    <!-- Error text [CHAR LIMIT = NONE]-->
    <string name="error">Oops! It seems that an error has occurred. Please check your Internet
    connection and come back in a while</string>
    <string name="error_api">No questions can be recovered at this moment. Try again in a
        while</string>

    <!-- RESULTS ACTIVITY -->
    <!-- Finish message [CHAR LIMIT = NONE]-->
    <string name="finish">You finished!</string>
    <!-- Score label [CHAR LIMIT = 30]-->
    <string name="score">Your score:</string>
    <!-- Correct answers label [CHAR LIMIT = 15]-->
    <string name="correct_label">Correct</string>
    <!-- Time left label [CHAR LIMIT = 15]-->
    <string name="time_label">Time left</string>
    <!-- Points label [CHAR LIMIT = 15]-->
    <string name="points_label">Points</string>
    <!-- Text for sharing [CHAR LIMIT = NONE]-->
    <string name="shared_text">I have achieved <xliff.g example="250" id="points">%s</xliff.g>
        points on <xliff.g example="Science!" id="app_name">%s</xliff.g></string>
    <!-- Minutes text-->
    <string name="minutes_zero" translatable="false">00:</string>
    <string name="minutes_one" translatable="false">01:</string>
    <string name="seconds_zero" translatable="false">00</string>
    <string name="seconds_min" translatable="false">0<xliff.g example="6" id="seconds">%s</xliff.g></string>
    <!-- Time left text-->
    <string name="time_left" translatable="false"><xliff.g example="00:" id="minutes">%s</xliff.g><xliff.g example="32" id="seconds">%s</xliff.g></string>
    <!-- Toasts text [CHAR LIMIT = NONE]-->
    <string name="error_database">Oops! It seems that an error has occurred. Your results cannot be
        saved at this moment</string>
    <string name="database_loading">Managing formulas&#8230; Wait a moment</string>

    <!-- PROFILE ACTIVITY -->
    <!-- Games label [CHAR LIMIT = 15]-->
    <string name="games_label">Games</string>
    <!-- Incorrect answers label [CHAR LIMIT = 15]-->
    <string name="incorrect_label">Incorrect</string>
    <!-- Stats label [CHAR LIMIT = 20]-->
    <string name="stats_label">Stats</string>
    <!-- Topics label [CHAR LIMIT = 20]-->
    <string name="topics_label">Topics</string>
    <!-- No data message [CHAR LIMIT = NONE]-->
    <string name="no_data">Play a game to start developing your scientific skills!</string>
    <!-- Dialogs confirmation text [CHAR LIMIT = NONE]-->
    <string name="want_sign_out">Are you sure you want to sign out?</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <!-- Credits text [CHAR LIMIT = NONE]-->
    <string name="credits">Science! questions are retrieved from the Open Trivia Db.\nAll icons were
        made by Freepik from www.flaticon.com</string>
    <string name="dialog_ok">OK</string>
    <!-- Toast for sign out [CHAR LIMIT = NONE]-->
    <string name="sign_out_toast">Log out successful</string>
    <!-- Toast error texts [CHAR LIMIT = NONE]-->
    <string name="error_profile">Oops! It seems that an error has occurred. Your results cannot be
        displayed at this moment</string>
    <string name="permission_denied">This functionality is only available if you accept the proper
        permissions</string>
    <string name="error_internet_profile">Oops! It seems that an error has occurred. Your results
        cannot be displayed without Internet</string>
    <!-- Percentage text-->
    <string name="percentage" translatable="false"><xliff.g example="66" id="value">%s</xliff.g>%%</string>
    <!-- Pie chart label [CHAR LIMIT = NONE]-->
    <string name="pie_chart_label">Points by category</string>
    <!-- Select picture title [CHAR LIMIT = 30]-->
    <string name="select_picture">Select picture</string>

    <!-- SIGN IN ACTIVITY -->
    <!-- Sign up label [CHAR LIMIT = NONE]-->
    <string name="sign_up">Sign up to become a true scientist!</string>
    <!-- Facebook login button [CHAR LIMIT = 30]-->
    <string name="facebook_button">LOGIN WITH FACEBOOK</string>
    <!-- Google login button [CHAR LIMIT = 30]-->
    <string name="google_button">LOGIN WITH GOOGLE</string>
    <!-- Email login button [CHAR LIMIT = 30]-->
    <string name="email_button">LOGIN WITH EMAIL</string>
    <!-- Sign in phrase 1 [CHAR LIMIT = NONE]-->
    <string name="sign_in_1">Have an account?
        <xliff.g example="Sign In!" id="sign_in_2">%s</xliff.g></string>
    <!-- Sign in phrase 2 [CHAR LIMIT = NONE]-->
    <string name="sign_in_2">Sign in!</string>
    <!-- Sign up phrase 1 [CHAR LIMIT = NONE]-->
    <string name="sign_up_account_1">Don\'t have an e-mail account?
        <xliff.g example="Sign Up!" id="sign_up_account_2">%s</xliff.g></string>
    <!-- Sign up phrase 2 [CHAR LIMIT = NONE]-->
    <string name="sign_up_account_2">Sign up!</string>
    <!-- Sign in button [CHAR LIMIT = NONE]-->
    <string name="sign_in_button">SIGN IN</string>
    <!-- Sign up button [CHAR LIMIT = NONE]-->
    <string name="sign_up_button">SIGN UP</string>
    <!-- EditText hints [CHAR LIMIT = 30]-->
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <!-- EditText errors [CHAR LIMIT = 30]-->
    <string name="username_error">Username cannot be empty</string>
    <string name="email_error">Email cannot be empty</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="password_error">Password cannot be empty</string>
    <!-- Toast messages [CHAR LIMIT = NONE]-->
    <string name="existing_email_message">User with this email already exist</string>
    <string name="authentication_error">Authentication failed</string>
    <string name="login_canceled">Login canceled</string>

    <!-- PLACEHOLDERS -->
    <!-- Question placeholder -->
    <string name="question_placeholder" translatable="false">How many zeros are there in a
        googol?</string>
    <!-- Answer placeholder -->
    <string name="answer_placeholder" translatable="false">100</string>
    <!-- Percentage placeholder -->
    <string name="percentage_placeholder" translatable="false">60%</string>
    <!-- Number of correct answer placeholder -->
    <string name="correct_placeholder" translatable="false">6/10</string>
    <!-- Time left placeholder -->
    <string name="time_placeholder" translatable="false">00:32</string>
    <!-- Points achieved placeholder -->
    <string name="points_placeholder" translatable="false">120</string>
    <!-- User name placeholder -->
    <string name="name_placeholder" translatable="false">Alfred Einstein</string>
    <!-- User nickname placeholder -->
    <string name="nickname_placeholder" translatable="false">Ada Lovelace
        great-great-grandchild</string>

    <!-- CONTENT DESCRIPTION -->
    <!-- Topic image content description [CHAR LIMIT = NONE]-->
    <string name="topic_image_ct">Image depicting the current topic</string>
    <!-- Profile picture content description [CHAR LIMIT = NONE]-->
    <string name="profile_picture_ct">Profile picture</string>
    <!-- Add profile picture content description [CHAR LIMIT = NONE]-->
    <string name="add_profile_picture_ct">Add profile picture</string>
    <!-- Edit profile content description [CHAR LIMIT = NONE]-->
    <string name="edit_profile_ct">Edit profile</string>
    <!-- Pie chart content description [CHAR LIMIT = NONE]-->
    <string name="pie_chart_ct">Pie chart showing the user stats</string>
    <!-- Stats progress bar content description [CHAR LIMIT = NONE]-->
    <string name="stats_bar_ct">Progress bar showing the user stats</string>
    <!-- Close button content description [CHAR LIMIT = NONE]-->
    <string name="time_bar_ct">Progress bar showing the remaining time</string>
    <!-- Results chart content description [CHAR LIMIT = NONE]-->
    <string name="results_chart_ct">Chart showing the user results in percentage</string>
    <!-- App logo content description [CHAR LIMIT = NONE]-->
    <string name="app_logo_ct">App logo</string>
    <!-- Visibility icon content description [CHAR LIMIT = NONE]-->
    <string name="password_visibility_ct">Password visibility toggle</string>
    <!-- Previous topic button content description [CHAR LIMIT = NONE]-->
    <string name="previous_topic_ct">Previous topic</string>
    <!-- Next topic button icon content description [CHAR LIMIT = NONE]-->
    <string name="next_topic_ct">Next topic</string>

    <!-- ACTION BUTTON TITLES-->
    <string name="action_settings">Settings</string>
    <string name="action_close">Close</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="app_credits">About Science!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
