<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/marginBig">

    <TextView
        style="@style/profileLabelStyle"
        android:text="@string/stats_label" />

    <!--TODO remove hardcoded widths-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/statsBarHeight">

        <ProgressBar
            android:id="@+id/stats_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/statsBarHeight"
            android:contentDescription="@string/stats_bar_ct"
            android:indeterminate="false"
            android:max="100"
            android:progressDrawable="@drawable/progress_bar_stats"
            tools:progress="66" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/statsBarHeight"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_correct_label"
                style="@style/statsBarLabelTextStyle"
                android:layout_width="225dp"
                android:text="@string/correct_label"
                android:textColor="@color/primaryDarkText" />

            <TextView
                android:id="@+id/tv_incorrect_label"
                style="@style/statsBarLabelTextStyle"
                android:layout_width="115dp"
                android:text="@string/incorrect_label"
                android:textColor="@color/primaryLightText" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginSmall"
        android:layout_marginTop="@dimen/marginMini"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_correct_percentage"
            style="@style/statsBarValueStyle"
            android:layout_width="225dp"
            android:textColor="@color/colorTopicAnimals"
            tools:text="@string/percentage_placeholder" />

        <TextView
            android:id="@+id/tv_incorrect_percentage"
            style="@style/statsBarValueStyle"
            android:layout_width="115dp"
            android:textColor="@color/colorAccentDark"
            tools:text="@string/percentage_placeholder" />
    </LinearLayout>

    <TextView
        style="@style/profileLabelStyle"
        android:text="@string/topics_label" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/topics_pie_chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pieChartSize"
        android:layout_marginBottom="@dimen/marginSmall"
        android:contentDescription="@string/pie_chart_ct" />

    <TextView
        style="@style/profileLabelStyle"
        android:text="@string/badges_label" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_empty_badges"
            style="@style/emptyTextStyle"
            android:text="@string/no_badges" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_badges_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
</LinearLayout>