<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- TODO: title only in collapsed mode-->
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            app:contentScrim="?attr/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bigSeparation"
                android:orientation="vertical"
                android:padding="@dimen/marginBig"
                app:layout_collapseMode="parallax">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_picture"
                    android:layout_width="@dimen/circleImageDimen"
                    android:layout_height="@dimen/circleImageDimen"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/profile_picture_ct"
                    tools:src="@drawable/ic_user" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/marginMini"
                    android:gravity="center_horizontal"
                    android:textColor="@color/primaryLightText"
                    android:textSize="@dimen/title_textSize"
                    android:textStyle="bold"
                    tools:text="@string/name_placeholder" />

                <TextView
                    android:id="@+id/user_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/secondaryLightText"
                    android:textSize="@dimen/body_textSize"
                    android:textStyle="italic"
                    tools:text="@string/nickname_placeholder" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorAccent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout style="@style/summaryLayoutProfileStyle">

                    <TextView
                        android:id="@+id/tv_number_of_games"
                        style="@style/summaryTextStyle_profile"
                        tools:text="@string/points_placeholder" />

                    <TextView
                        style="@style/summaryLabelStyle_profile"
                        android:text="@string/games_label" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/summary_separation"
                    android:layout_height="match_parent"
                    android:background="@color/transparentDark" />

                <LinearLayout style="@style/summaryLayoutProfileStyle">

                    <TextView
                        android:id="@+id/tv_number_of_correct"
                        style="@style/summaryTextStyle_profile"
                        tools:text="@string/points_placeholder" />

                    <TextView
                        style="@style/summaryLabelStyle_profile"
                        android:text="@string/correct_label" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/summary_separation"
                    android:layout_height="match_parent"
                    android:background="@color/transparentDark" />

                <LinearLayout style="@style/summaryLayoutProfileStyle">

                    <TextView
                        android:id="@+id/tv_number_of_incorrect"
                        style="@style/summaryTextStyle_profile"
                        tools:text="@string/points_placeholder" />

                    <TextView
                        style="@style/summaryLabelStyle_profile"
                        android:text="@string/incorrect_label" />
                </LinearLayout>
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Loading indicator is only shown before the first load -->
            <ProgressBar
                android:id="@+id/loading_spinner"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/marginMedium" />

            <!-- TextView for empty data cases-->
            <TextView
                android:id="@+id/tv_empty_stats"
                android:layout_margin="@dimen/marginMedium"
                android:text="@string/no_data"
                style="@style/emptyTextStyle" />

            <include
                layout="@layout/stats_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>